enhanced line breaking for tutgen

--- a/web/html/templates.html
+++ b/web/html/templates.html
@@ -10,13 +10,23 @@ For each row, we want to have three buttons in each direction for altering the d
 
 <template id="tmpl-tutorial-calendar-row">
   <tr>
-    <td><button><i class="fas fa-angle-double-left"></i> 10</button></td>
-    <td><button><i class="fas fa-angle-double-left"></i> 3</button></td>
-    <td><button><i class="fas fa-angle-left"></i> 1</button></td>
+    <td>
+      <button><i class="fas fa-angle-double-left"></i> 10</button>
+    </td>
+    <td>
+      <button><i class="fas fa-angle-double-left"></i> 3</button>
+    </td>
+    <td>
+      <button><i class="fas fa-angle-left"></i> 1</button>
+    </td>
     <td><span class="cal-value"></span></td>
     <td><button>1 <i class="fas fa-angle-right"></i></button></td>
-    <td><button>3 <i class="fas fa-angle-double-right"></i></button></td>
-    <td><button>10 <i class="fas fa-angle-double-right"></i></button></td>
+    <td>
+      <button>3 <i class="fas fa-angle-double-right"></i></button>
+    </td>
+    <td>
+      <button>10 <i class="fas fa-angle-double-right"></i></button>
+    </td>
   </tr>
 </template>
 
